# Tigo-Energy

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  requirements_dev.txt
.github/workflows/: ci.yml
custom_components/: __init__.py
custom_components/tigo_energy/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  models.py  notifications.py  sensor.py  strings.json
custom_components/tigo_energy/translations/: en.json
docs/: entity-name-reference.md  persistent-notifications-reference.md  tigo-api-integration-notes.md  tigo-integration-time-lag-investigation.md  tigo-readonly-alerts-live-probe-2026-03-01.md  tigo-terms-glossary-home-assistant.md
tests/: conftest.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_notifications.py  test_sensor.py
